# camoufox-session-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
docs/superpowers/plans/: 2026-07-16-camoufox-session-service.md  2026-07-16-chinese-documentation.md
docs/superpowers/specs/: 2026-07-16-camoufox-session-service-design.md  2026-07-16-chinese-documentation-design.md
src/camoufox_service/: __init__.py  __main__.py  app.py  browser.py  challenge.py  challenge_worker.py  cloudflare.py  config.py  models.py  protocol.py  recaptcha.py  recaptcha_audio.py  service.py  sessions.py  supervisor.py  turnstile.py  worker.py
tests/: test_api.py  test_browser_integration.py  test_challenge.py  test_challenge_browser_integration.py  test_challenge_worker.py  test_dockerfile.py  test_main.py  test_models.py  test_protocol.py  test_recaptcha.py  test_sessions.py  test_supervisor.py  test_turnstile.py
tests/fixtures/: fake_worker.py
