[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "camoufox-session-service"
version = "0.1.0"
description = "A supervised Camoufox browser session service"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "camoufox[geoip]>=0.4.11,<0.5",
    "fastapi>=0.115,<1",
    "psutil>=6,<8",
    "pydantic>=2.9,<3",
    "pydub>=0.25,<1",
    "requests>=2.31,<3",
    "SpeechRecognition>=3.10,<4",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
test = [
    "build>=1.2,<2",
    "httpx>=0.27,<1",
    "pytest>=8,<10",
    "pytest-asyncio>=0.24,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

