[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "camoufox-session-service"
version = "0.1.0"
description = "Supervised Camoufox and Chromium service for browser challenges and reusable sessions"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["browser-automation", "camoufox", "cloudflare", "recaptcha", "turnstile"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "camoufox[geoip]>=0.4.11,<0.5",
    "DrissionPage==4.1.0.0b14",
    "fastapi>=0.115,<0.116",
    "psutil>=6,<8",
    "pydantic>=2.9,<3",
    "pydub>=0.25,<1",
    "playwright==1.50.0",
    "requests[socks]>=2.31,<3",
    "SpeechRecognition>=3.10,<4",
    "uvicorn[standard]>=0.34,<0.35",
]

[project.optional-dependencies]
test = [
    "build>=1.2,<2",
    "httpx>=0.27,<1",
    "pytest>=8,<10",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.12,<1",
]

[project.urls]
Repository = "https://github.com/heidashuai-maker/camoufox-session-service"
Issues = "https://github.com/heidashuai-maker/camoufox-session-service/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 15
